changes to endpoints and fe
