# backend/docs/swagger.yaml
@@ -1,25 +1,7 @@
 basePath: /api/v1
 definitions:
-  CreateGuest:
-    properties:
-      first_name:
-        example: John
-        type: string
-      last_name:
-        example: Doe
-        type: string
-      profile_picture:
-        example: https://example.com/john.jpg
-        type: string
-      timezone:
-        example: America/New_York
-        type: string
-    type: object
   CreateUser:
     properties:
-      clerk_id:
-        example: user_123
-        type: string
       department:
         example: Housekeeping
         type: string
@@ -28,6 +10,9 @@ definitions:
         type: string
       first_name:
         example: John
+        type: string
+      id:
+        example: user_123
         type: string
       last_name:
         example: Doe
@@ -68,14 +53,26 @@ definitions:
       created_at:
         example: "2024-01-02T00:00:00Z"
         type: string
+      email:
+        example: jane.doe@example.com
+        type: string
       first_name:
-        example: John
+        example: Jane
         type: string
       id:
         example: 530e8400-e458-41d4-a716-446655440000
         type: string
       last_name:
         example: Doe
+        type: string
+      notes:
+        example: VIP
+        type: string
+      phone:
+        example: +1 (617) 012-3456
+        type: string
+      preferences:
+        example: extra pillows
         type: string
       profile_picture:
         example: https://example.com/john.jpg
@@ -216,26 +213,8 @@ definitions:
         example: 521ee400-e458-41d4-a716-446655440000
         type: string
     type: object
-  UpdateGuest:
-    properties:
-      first_name:
-        example: John
-        type: string
-      last_name:
-        example: Doe
-        type: string
-      profile_picture:
-        example: https://example.com/john.jpg
-        type: string
-      timezone:
-        example: America/New_York
-        type: string
-    type: object
   User:
     properties:
-      clerk_id:
-        example: user_123
-        type: string
       created_at:
         example: "2024-01-01T00:00:00Z"
         type: string
@@ -249,7 +228,7 @@ definitions:
         example: John
         type: string
       id:
-        example: 550e8400-e29b-41d4-a716-446655440000
+        example: user_123
         type: string
       last_name:
         example: Doe
@@ -273,6 +252,174 @@ definitions:
         type: integer
       message: {}
     type: object
+  github_com_generate_selfserve_internal_models.BookingStatus:
+    enum:
+    - active
+    - inactive
+    type: string
+    x-enum-varnames:
+    - BookingStatusActive
+    - BookingStatusInactive
+  github_com_generate_selfserve_internal_models.CreateGuest:
+    properties:
+      email:
+        example: jane.doe@example.com
+        type: string
+      first_name:
+        example: Jane
+        type: string
+      last_name:
+        example: Doe
+        type: string
+      notes:
+        example: VIP
+        type: string
+      phone:
+        example: +1 (617) 012-3456
+        type: string
+      preferences:
+        example: extra pillows
+        type: string
+      profile_picture:
+        example: https://example.com/john.jpg
+        type: string
+      timezone:
+        example: America/New_York
+        type: string
+    type: object
+  github_com_generate_selfserve_internal_models.GuestBooking:
+    properties:
+      arrival_date:
+        type: string
+      departure_date:
+        type: string
+      guest:
+        $ref: '#/definitions/Guest'
+      id:
+        example: f353ca91-4fc5-49f2-9b9e-304f83d11914
+        type: string
+      room:
+        $ref: '#/definitions/github_com_generate_selfserve_internal_models.Room'
+      status:
+        $ref: '#/definitions/github_com_generate_selfserve_internal_models.BookingStatus'
+    type: object
+  github_com_generate_selfserve_internal_models.GuestWithBooking:
+    properties:
+      arrival_date:
+        type: string
+      departure_date:
+        type: string
+      first_name:
+        type: string
+      floor:
+        type: integer
+      id:
+        type: string
+      last_name:
+        type: string
+      room_number:
+        type: integer
+    required:
+    - arrival_date
+    - departure_date
+    - first_name
+    - floor
+    - id
+    - last_name
+    - room_number
+    type: object
+  github_com_generate_selfserve_internal_models.GuestWithStays:
+    properties:
+      created_at:
+        example: "2024-01-02T00:00:00Z"
+        type: string
+      email:
+        example: jane.doe@example.com
+        type: string
+      first_name:
+        example: Jane
+        type: string
+      id:
+        example: 530e8400-e458-41d4-a716-446655440000
+        type: string
+      last_name:
+        example: Doe
+        type: string
+      notes:
+        example: VIP
+        type: string
+      phone:
+        example: +1 (617) 012-3456
+        type: string
+      preferences:
+        example: extra pillows
+        type: string
+      profile_picture:
+        example: https://example.com/john.jpg
+        type: string
+      stays:
+        items:
+          $ref: '#/definitions/github_com_generate_selfserve_internal_models.Stay'
+        type: array
+      timezone:
+        example: America/New_York
+        type: string
+      updated_at:
+        example: "2024-01-02T00:00:00Z"
+        type: string
+    type: object
+  github_com_generate_selfserve_internal_models.Room:
+    properties:
+      floor:
+        type: integer
+      room_number:
+        type: integer
+      room_status:
+        type: string
+      suite_type:
+        type: string
+    type: object
+  github_com_generate_selfserve_internal_models.RoomWithBooking:
+    properties:
+      booking_status:
+        $ref: '#/definitions/github_com_generate_selfserve_internal_models.BookingStatus'
+      first_name:
+        type: string
+      floor:
+        type: integer
+      last_name:
+        type: string
+      room_number:
+        type: integer
+      room_status:
+        type: string
+      suite_type:
+        type: string
+    type: object
+  github_com_generate_selfserve_internal_models.Stay:
+    properties:
+      arrival_date:
+        type: string
+      departure_date:
+        type: string
+      room_number:
+        type: string
+    type: object
+  github_com_generate_selfserve_internal_models.UpdateGuest:
+    properties:
+      first_name:
+        example: Jane
+        type: string
+      last_name:
+        example: Doe
+        type: string
+      profile_picture:
+        example: https://example.com/john.jpg
+        type: string
+      timezone:
+        example: America/New_York
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -287,6 +434,41 @@ info:
   version: "1.0"
 paths:
   /api/v1/guests:
+    get:
+      description: Retrieves guests ptionally filtered by floor in which they are
+        staying
+      parameters:
+      - collectionFormat: csv
+        description: Floor numbers
+        in: query
+        items:
+          type: integer
+        name: floors[]
+        type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_generate_selfserve_internal_models.GuestWithBooking'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get Guests
+      tags:
+      - guests
     post:
       consumes:
       - application/json
@@ -297,7 +479,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/CreateGuest'
+          $ref: '#/definitions/github_com_generate_selfserve_internal_models.CreateGuest'
       produces:
       - application/json
       responses:
@@ -372,7 +554,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/UpdateGuest'
+          $ref: '#/definitions/github_com_generate_selfserve_internal_models.UpdateGuest'
       produces:
       - application/json
       responses:
@@ -399,6 +581,43 @@ paths:
               type: string
             type: object
       summary: Updates a guest
+      tags:
+      - guests
+  /api/v1/guests/stays/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves a single guest with previous stays given an id
+      parameters:
+      - description: Guest ID (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_generate_selfserve_internal_models.GuestWithStays'
+        "400":
+          description: Invalid guest ID format
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Guest not found
+          schema:
+            $ref: '#/definitions/github_com_generate_selfserve_internal_errs.HTTPError'
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Gets a guest with previous stays
       tags:
       - guests
   /api/v1/hotels/{id}:
@@ -463,6 +682,40 @@ paths:
       summary: Get developer member
       tags:
       - devs
+  /guest_bookings/floor:
+    get:
+      description: Retrieves multiple guest bookings whose booked rooms are in the
+        provided floors array
+      parameters:
+      - description: Comma-separated floor numbers
+        in: query
+        name: floors
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_generate_selfserve_internal_models.GuestBooking'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get guest Bookings By Floor
+      tags:
+      - guest-bookings
   /hello:
     get:
       consumes:
@@ -601,6 +854,38 @@ paths:
       summary: generates a request
       tags:
       - requests
+  /rooms:
+    get:
+      description: Retrieves rooms optionally filtered by room number
+      parameters:
+      - description: Room number
+        in: query
+        name: number
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_generate_selfserve_internal_models.RoomWithBooking'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get Rooms
+      tags:
+      - rooms
   /users:
     post:
       consumes:
