# backend/internal/models/guests.go
@@ -7,10 +7,6 @@ type CreateGuest struct {
 	LastName       string  `json:"last_name" validate:"notblank" example:"Doe"`
 	ProfilePicture *string `json:"profile_picture,omitempty" validate:"omitempty,url" example:"https://example.com/john.jpg"`
 	Timezone       *string `json:"timezone,omitempty" validate:"omitempty,timezone" example:"America/New_York"`
-	Phone          *string `json:"phone,omitempty" example:"+1 (617) 012-3456"`
-	Email          *string `json:"email,omitempty" validate:"omitempty,email" example:"jane.doe@example.com"`
-	Preferences    *string `json:"preferences,omitempty" example:"extra pillows"`
-	Notes          *string `json:"notes,omitempty" example:"VIP"`
 }
 
 type UpdateGuest struct {
@@ -32,22 +28,30 @@ type GuestFilter struct {
 }
 
 type GuestWithBooking struct {
-	ID   string `json:"id"`
-	FirstName      string  `json:"first_name"`
-	LastName      string  `json:"last_name"`
-	RoomNumber int  `json:"room_number"`
-	Floor int      `json:"floor"`
-	ArrivalDate   string        `json:"arrival_date"`
-    DepartureDate string        `json:"departure_date"`
+    ID            string `json:"id" validate:"required"`
+    FirstName     string `json:"first_name" validate:"required"`
+    LastName      string `json:"last_name" validate:"required"`
+    RoomNumber    int    `json:"room_number" validate:"required"`
+    Floor         int    `json:"floor" validate:"required"`
+    ArrivalDate   string `json:"arrival_date" validate:"required"`
+    DepartureDate string `json:"departure_date" validate:"required"`
 }
 
 type Stay struct {
-    ArrivalDate   *string `json:"arrival_date"`
-    DepartureDate *string `json:"departure_date"`
-    RoomNumber    *string `json:"room_number"`
-}
+	ArrivalDate   string `json:"arrival_date" validate:"required" example:"2024-01-02"`
+	DepartureDate string `json:"departure_date" validate:"required" example:"2024-01-05"`
+	RoomNumber    int    `json:"room_number" validate:"required" example:"101"`
+} //@name Stay
 
 type GuestWithStays struct {
-    Guest
-    Stays []Stay `json:"stays"`
-}
+	ID             string  `json:"id" validate:"required" example:"530e8400-e458-41d4-a716-446655440000"`
+	FirstName      string  `json:"first_name" validate:"required" example:"Jane"`
+	LastName       string  `json:"last_name" validate:"required" example:"Doe"`
+	Phone          *string `json:"phone,omitempty" example:"+1 (617) 012-3456"`
+	Email          *string `json:"email,omitempty" validate:"omitempty,email" example:"jane.doe@example.com"`
+	Preferences    *string `json:"preferences,omitempty" example:"extra pillows"`
+	Notes          *string `json:"notes,omitempty" example:"VIP"`
+	Stays          []Stay  `json:"stays" validate:"required"`
+} //@name GuestWithStays
+
+
